--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-fileupload": "0.0.5",
     "express-session": "^1.14.0",
     "jade": "~1.11.0",
     "knex": "^0.11.9",
