--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "knex": "^0.11.9",
     "morgan": "~1.7.0",
+    "nodemailer": "^2.5.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
     "pg": "^6.0.3",
